# remote-desktop

./: .gitignore  README.md  README.zh.md  package-lock.json  package.json
.github/workflows/: ci.yml
agent/: Cargo.toml  README.md  build.rs
agent/src/: clipboard.rs  config.rs  control.rs  input.rs  lib.rs  main.rs  permission.rs  protocol.rs  provision.rs  signaling.rs  webrtc_peer.rs
agent/src/video/: convert.rs  mod.rs  openh264_encoder.rs  pipeline.rs  sck_capturer.rs  testpattern.rs  videotoolbox_encoder.rs  xcap_capturer.rs
agent/tests/: echo_loopback.rs  ice_trickle.rs  input_loopback.rs  protocol_roundtrip.rs  video_pipeline.rs  video_sdp.rs
docs/: BACKLOG.md
docs/superpowers/: plan2b-e2e-smoke.md  plan3-input-smoke.md  plan4-video-smoke.md
docs/superpowers/plans/: 2026-07-01-plan1-protocol-and-server.md  2026-07-01-plan2a-rust-agent.md  2026-07-01-plan2b-web-coturn-e2e.md  2026-07-01-plan3-input-injection.md  2026-07-02-high-value-ux-pass.md  2026-07-02-plan4-screen-capture-video.md  2026-07-02-plan5-macos-video-hardening.md  2026-07-02-plan6-agent-reliability.md  2026-07-02-resolution-and-bitrate-slider.md  2026-07-06-encoding-smoothness.md
docs/superpowers/specs/: 2026-07-01-plan3-input-injection-design.md  2026-07-01-remote-desktop-design.md  2026-07-02-high-value-ux-pass-design.md  2026-07-02-plan4-screen-capture-video-design.md  2026-07-02-plan5-macos-video-hardening-design.md  2026-07-02-plan6-agent-reliability-design.md  2026-07-02-resolution-and-bitrate-slider-design.md  2026-07-06-encoding-smoothness-design.md
infra/coturn/: README.md  docker-compose.yml  turnserver.conf
