[package]
name = "rd-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "rd_agent"
path = "src/lib.rs"

[[bin]]
name = "rd-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.11"
tokio-tungstenite = "0.23"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
rpassword = "7"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
enigo = "0.6"
yuv = "0.8"
openh264 = { version = "0.9", features = ["source"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.2"
screencapturekit = "8"

# Screen capture on Windows (macOS uses ScreenCaptureKit above; Linux capture
# is not wired up yet — xcap's Linux/pipewire build needs more work, so Linux
# falls back to the test pattern for now).
[target.'cfg(target_os = "windows")'.dependencies]
xcap = "0.9"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
